examples/test/testpolicy7753.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7753
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key0: value24
      key8: value20
      key38: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value18
      podSelector:
        matchLabels:
          key21: value43
